--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(Nyx)
 set(CMAKE_CXX_STANDARD 17)
+
 add_executable(Nyx WIN32 main.cpp)
+
 target_compile_definitions(Nyx PRIVATE UNICODE _UNICODE)
-target_link_libraries(Nyx user32)
+target_link_libraries(Nyx user32 d3d12 dxgi d3dcompiler)
